--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <h2>Documentation Links (Source Material)</h2>
             <ul>
-                <li><a href="https://navvis-my.sharepoint.com/:b:/p/vt23puh_ads/ET1hjeds9otNiy2AIoyMubcBrAv9of7YSMsvqiCqz2f5oA?e=REGfyY" target="_blank">Ivion Documentation</a></li>
+                <li><a href="https://navvis-my.sharepoint.com/:b:/p/vt23puh_ads/ET1hjeds9otNiy2AIoyMubcBrAv9of7YSMsvqiCqz2f5oA?e=REGfyY" target="_blank">IVION Documentation</a></li>
                 <li><a href="https://navvis-my.sharepoint.com/:b:/p/vt23puh_ads/EVX6o2j2RlVFuQqPvoyJjv4B593PSpC9o6IlGUYGLSqO0g?e=RTGMQH" target="_blank">VLX Documentation</a></li>
                 <li><a href="https://navvis-my.sharepoint.com/:b:/p/vt23puh_ads/EQr8BPtyq-dAidge0NmxCRYB2CrIN2p7rwc4UQ2V2t_DpA?e=RnlAlX" target="_blank">API Documentation</a></li>
                 <li><a href="https://navvis-my.sharepoint.com/:b:/p/vt23puh_ads/Eb3iCngt_89JsCnARMFm0GEBAAudHY1vI9a-tS96SYGYUg?e=jJ4Btg" target="_blank">M6 Documentation</a></li>
